[project]
name = "pokemon-unite-meta-analysis"
version = "0.1.0"
description = "Backend to expose Pokemon Unite data analysis via API"
authors = [{ name = "Adriano Rodrigues", email = "adrianordp1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = ["fastapi (>=0.116.1,<0.117.0)", "pandas (>=2.3.2,<3.0.0)"]

[tool.poetry]
include = ["src/**"]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "ruff (>=0.13.0,<0.14.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "coverage (>=7.10.7,<8.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest -v"
lint = "ruff check ."
run = "python -m src.pokemon_unite_meta_analysis"
coverage = "coverage run -m pytest && coverage report -m"